Bug fix - searchbar was transparent on mobile light mode

--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -167,6 +167,7 @@
         width: 100%;
         padding: 1rem 0;
         justify-content: center;
+        background-color: rgb(250, 250, 250);
     }
 
     .searchBarLight.active,
